unpackaged/main/default/objects/Account/fields/Quickbooks_Integration__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quickbooks Integration</label>
    <type>Checkbox</type>
</CustomField>