unpackaged/main/default/objects/Account/fields/QuickBooks_Online__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuickBooks Online</label>
    <type>Checkbox</type>
</CustomField>