unpackaged/main/default/objects/Account/fields/QuickBooks_Syncs__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Syncs__c</fullName>
    <label>QuickBooks Syncs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>