unpackaged/main/default/objects/Account/fields/Record_Hash__c.field-meta.xml
<CustomField>
    <fullName>Record_Hash__c</fullName>
    <externalId>true</externalId>
    <label>Record Hash</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>