unpackaged/main/default/objects/Account/fields/Sent_To_Merchant_Mandates__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Merchant_Mandates__c</fullName>
    <description>Mandates yet to be approved</description>
    <label>Sent To Merchant Mandates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>