unpackaged/main/default/objects/Account/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <description>Unique URL slug for each account</description>
    <label>Slug</label>
    <length>80</length>
    <type>Text</type>
</CustomField>