unpackaged/main/default/objects/Account/fields/StuRents__c.field-meta.xml
<CustomField>
    <fullName>StuRents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StuRents</label>
    <type>Checkbox</type>
</CustomField>