unpackaged/main/default/objects/Account/fields/Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Tasks</label>
    <type>Checkbox</type>
</CustomField>