unpackaged/main/default/objects/Account/fields/Subs_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subs_End_Date__c</fullName>
    <description>The end date of the current Subscription</description>
    <label>Subs. End Date</label>
    <type>Date</type>
</CustomField>