unpackaged/main/default/objects/Account/fields/Subs_Next_Collection__c.field-meta.xml
<CustomField>
    <fullName>Subs_Next_Collection__c</fullName>
    <description>Latest date charges</description>
    <label>Subs. Next Collection</label>
    <type>Date</type>
</CustomField>