unpackaged/main/default/objects/Account/fields/Subs_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subs_Start_Date__c</fullName>
    <description>The start date of the current Subscription</description>
    <label>Subs. Start Date</label>
    <type>Date</type>
</CustomField>