unpackaged/main/default/objects/Account/fields/Suggested_Solutions_Ent__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Solutions_Ent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suggested Solutions (Ent)</label>
    <type>Checkbox</type>
</CustomField>