unpackaged/main/default/objects/Account/fields/Tasks_Has_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Has_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks - Has Assigned</label>
    <type>Checkbox</type>
</CustomField>