unpackaged/main/default/objects/Account/fields/Tasks_No_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Tasks_No_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks (No Checklist)</label>
    <type>Checkbox</type>
</CustomField>