unpackaged/main/default/objects/Account/fields/Tasks_Type_Pro__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Type_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks Type (Pro.)</label>
    <type>Checkbox</type>
</CustomField>