unpackaged/main/default/objects/Account/fields/Tenancy_Sub_Types__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_Sub_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenancy Sub Types</label>
    <type>Checkbox</type>
</CustomField>