unpackaged/main/default/objects/Account/fields/Tenant_Referencing__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Referencing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>yes or no for previous month from sync date&#39;</description>
    <label>Tenant Referencing</label>
    <type>Checkbox</type>
</CustomField>