unpackaged/main/default/objects/Account/fields/Training_Day__c.field-meta.xml
<CustomField>
    <fullName>Training_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Day</label>
    <type>Checkbox</type>
</CustomField>