unpackaged/main/default/objects/Account/fields/Unregistered_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Deposits__c</fullName>
    <label>Unregistered Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>