unpackaged/main/default/objects/Account/fields/Utilise_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Utilise_Certificates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilise Certificates</label>
    <type>Checkbox</type>
</CustomField>