unpackaged/main/default/objects/Account/fields/Utilise_Unit_General_Info__c.field-meta.xml
<CustomField>
    <fullName>Utilise_Unit_General_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilise Unit General Info</label>
    <type>Checkbox</type>
</CustomField>