unpackaged/main/default/objects/Account/fields/Xero_Integration__c.field-meta.xml
<CustomField>
    <fullName>Xero_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xero Integration</label>
    <type>Checkbox</type>
</CustomField>