unpackaged/main/default/objects/Account/fields/Xero_Online__c.field-meta.xml
<CustomField>
    <fullName>Xero_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Xero Online</label>
    <type>Checkbox</type>
</CustomField>