unpackaged/main/default/objects/Account/fields/Xero_Syncs__c.field-meta.xml
<CustomField>
    <fullName>Xero_Syncs__c</fullName>
    <label>Xero Syncs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>