unpackaged/main/default/objects/Account/fields/Yapily_Live_Bank_Feed__c.field-meta.xml
<CustomField>
    <fullName>Yapily_Live_Bank_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yapily (Live Bank Feed)</label>
    <type>Checkbox</type>
</CustomField>